Added Imviz field sky plotting to analysis notebook

--- a/vasca/examples/vasca_pipe_result_analysis.ipynb
+++ b/vasca/examples/vasca_pipe_result_analysis.ipynb
@@ -53,7 +53,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table140263241566480-58952\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140238984662752-832651\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field_id</th><th>name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>sel</th><th>fov_diam</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th>deg</th><th></th><th>s</th><th>d</th><th>d</th></tr></thead>\n",
        "<tr><td>0</td><td>2604912508670050304</td><td>PS_COSMOS_MOS21</td><td>150.50213748204703</td><td>3.09702777491166</td><td>GALEX</td><td>NUV</td><td>True</td><td>1.1</td><td>29</td><td>28075.799999999996</td><td>54510.593935185185</td><td>56535.16921296297</td></tr>\n",
@@ -81,14 +81,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140263241566480-58952').dataTable()\");\n",
+       "    console.log(\"$('#table140238984662752-832651').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140263241566480-58952').dataTable({\n",
+       "    $('#table140238984662752-832651').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -131,7 +131,7 @@
      "data": {
       "text/html": [
        "<i>Table length=4</i>\n",
-       "<table id=\"table140264553870048-427294\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140238983843216-805780\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>vis_id</th><th>time_bin_start</th><th>time_bin_size</th><th>sel</th><th>field_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>d</th><th>s</th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>2604912371054936064</td><td>54510.593935185185</td><td>1275.65</td><td>True</td><td>2604912508670050304</td></tr>\n",
@@ -161,14 +161,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140264553870048-427294').dataTable()\");\n",
+       "    console.log(\"$('#table140238983843216-805780').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140264553870048-427294').dataTable({\n",
+       "    $('#table140238983843216-805780').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -209,7 +209,7 @@
      "data": {
       "text/html": [
        "<i>Table length=4</i>\n",
-       "<table id=\"table140263250221744-296597\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140240254916240-986728\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>fd_src_id</th><th>ra</th><th>dec</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_var</th><th>mag_rchiq</th><th>mag_dmax</th><th>mag_dmax_sig</th><th>ul_weight</th><th>sel</th><th>field_id</th><th>rg_src_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>19</td><td>150.85211129228375</td><td>3.344284140463829</td><td>26</td><td>3</td><td>20.082601987398586</td><td>0.0035474839293175475</td><td>1.948684796827247</td><td>0.1702980628380395</td><td>5.214141079370534</td><td>0.0</td><td>True</td><td>2604912508670050304</td><td>19</td></tr>\n",
@@ -239,14 +239,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140263250221744-296597').dataTable()\");\n",
+       "    console.log(\"$('#table140240254916240-986728').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140263250221744-296597').dataTable({\n",
+       "    $('#table140240254916240-986728').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -287,7 +287,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3ba09976fe94246a72f948fe18cd49f",
+       "model_id": "4e376436c82141ac8fd64effd9e6057f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +313,7 @@
      "data": {
       "text/html": [
        "<i>Table length=4</i>\n",
-       "<table id=\"table140263250226592-473808\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140238983853056-858870\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>time_start</th><th>time_delta</th><th>mag</th><th>mag_err</th><th>ul</th><th>sel</th></tr></thead>\n",
        "<thead><tr><th></th><th>d</th><th>s</th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>54510.59375</td><td>1275.6500244140625</td><td>20.05954933166504</td><td>0.037015367299318314</td><td>18.353994369506836</td><td>True</td></tr>\n",
@@ -343,14 +343,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140263250226592-473808').dataTable()\");\n",
+       "    console.log(\"$('#table140238983853056-858870').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140263250226592-473808').dataTable({\n",
+       "    $('#table140238983853056-858870').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -397,7 +397,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table140263225276304-41582\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140238983851616-747842\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>fd_src_id</th><th>mag</th><th>mag_err</th><th>ul</th><th>time_bin_start</th><th>time_bin_size</th><th>field_id</th><th>rg_src_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th></th><th>d</th><th>s</th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>19</td><td>[20.05955   0.       20.125635 20.04069  19.912304 20.112907 20.03194\\n 20.102726 20.16471  20.006193 20.099844 20.089745 19.9853   20.17396\\n 20.087082 20.087645  0.       20.122078 20.03694  20.035116 20.157976\\n 20.038393 20.066216 20.109518 20.127005  0.       20.147915 20.083242\\n 20.143024]</td><td>[0.03701537 0.         0.03700185 0.03399533 0.03266081 0.03391747\\n 0.0368081  0.03723254 0.03564352 0.0378229  0.04098009 0.04666338\\n 0.0472771  0.04725816 0.04782284 0.04051124 0.         0.0377781\\n 0.03884385 0.04371269 0.05705436 0.04593648 0.05014113 0.04492408\\n 0.04856652 0.         0.04705551 0.04682399 0.04487884]</td><td>[18.353994 18.130695 17.9042   18.245758 18.363676 18.394718 18.270094\\n 18.19824  18.130589 17.551802 17.597439 17.278326 17.02131  17.057617\\n 17.116014 17.761925 17.53826  17.89244  17.931963 17.42435  16.532663\\n 16.926003 16.781382 17.087067 17.201674 17.549099 17.361164 17.602737\\n 17.554636]</td><td>[54510.594 54520.66  54524.426 54532.508 54536.273 54540.312 54547.57\\n 54549.9   54550.17  55231.445 55233.844 55235.555 55237.68  55239.46\\n 55241.652 55249.32  55251.508 55257.535 55259.176 55261.3   55592.395\\n 55594.723 55596.707 55598.625 55600.543 55602.46  55604.375 55606.293\\n 55608.62 ]</td><td>[1275.65 1166.65 1065.6  1221.6  1280.6  1296.6  1233.55 1198.6  1166.6\\n  925.5   942.55  829.6   748.55  759.5   777.45 1006.65  920.5  1060.6\\n 1077.5   879.5   615.65  720.55  680.05  768.5   804.55  924.5   857.55\\n  944.55  926.55]</td><td>2604912508670050304</td><td>19</td></tr>\n",
@@ -425,14 +425,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140263225276304-41582').dataTable()\");\n",
+       "    console.log(\"$('#table140238983851616-747842').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140263225276304-41582').dataTable({\n",
+       "    $('#table140238983851616-747842').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -472,7 +472,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3b8e232a3f046f7bb820771958acaf6",
+       "model_id": "eedfad20ba0447c88e02b04156145190",
        "version_major": 2,
        "version_minor": 0
       },
@@ -519,7 +519,7 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table140263187600800-380898\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140238921270944-90822\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>pix_id</th><th>nr_vis</th><th>exp</th></tr></thead>\n",
        "<tr><td>0</td><td>94255763</td><td>29</td><td>27164.4</td></tr>\n",
        "<tr><td>1</td><td>94255764</td><td>29</td><td>27164.4</td></tr>\n",
@@ -554,14 +554,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140263187600800-380898').dataTable()\");\n",
+       "    console.log(\"$('#table140238921270944-90822').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140263187600800-380898').dataTable({\n",
+       "    $('#table140238921270944-90822').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -582,7 +582,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1882fa22ee64404ea0e6116d05100bf3",
+       "model_id": "765a7ede64bd4fb2a218684a49ecee88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -611,9 +611,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c2b5881-21bb-4d64-818e-2095e07988c8",
+   "metadata": {},
+   "source": [
+    "Example of field plotting with jdviz.Imviz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bef11605-077c-4c5b-8869-8f50e2d61eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jdaviz import Imviz\n",
+    "from astropy.coordinates import SkyCoord\n",
+    "from astropy.table import Table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efe4c5c2-8f3b-4a1a-b849-5ad16c864dc2",
+   "metadata": {},
+   "source": [
+    "Plot sky image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4c285c1c-cb4a-4e8d-a945-a6564c70e611",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imviz = Imviz()\n",
+    "viewer = imviz.default_viewer\n",
+    "imviz.load_data(field_fname, data_label='2529617952223789056')\n",
+    "imviz.show(loc='sidecar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b2375e0-3191-46e5-b8e2-e00bd4647c42",
+   "metadata": {},
+   "source": [
+    "Show source and detection markers on-top"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c06f561e-3852-4a7b-bfe9-457dec161057",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "sel_det = fd.tt_detections[\"sel\"]\n",
+    "tt_det_sky = Table({'coord': SkyCoord(fd.tt_detections[sel_det][\"ra\"], fd.tt_detections[sel_det][\"dec\"], frame='fk5')})\n",
+    "viewer.marker = {'color':'blue', 'markersize': 5., 'fill': False} #, 'alpha': 1.0\n",
+    "viewer.add_markers(tt_det_sky, use_skycoord=True, marker_name='D')\n",
+    "\n",
+    "srcs_sky = SkyCoord(fd.tt_sources[\"ra\"], fd.tt_sources[\"dec\"], frame='fk5')\n",
+    "tt_srcs_sky = Table({'coord':srcs_sky })\n",
+    "viewer.marker = {'color':'red', 'markersize': 2., 'fill': True} #, 'alpha': 1.0\n",
+    "viewer.add_markers(tt_srcs_sky, use_skycoord=True, marker_name='S')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1f7e42c-873a-4d44-b903-1307533e8e85",
+   "id": "a294420a-7491-460f-b6c0-dc2c99f19ef1",
    "metadata": {},
    "outputs": [],
    "source": []
