Removed plotting from pipeline

--- a/vasca/examples/vasca_pipe_result_analysis.ipynb
+++ b/vasca/examples/vasca_pipe_result_analysis.ipynb
@@ -30,9 +30,7 @@
     "from vasca.field import BaseField\n",
     "import vasca.visualization as vvis\n",
     "\n",
-    "results_folder = \"./vasca_pipeline/TDS_COSMOS/\"\n",
-    "region_fname = results_folder+\"region_TDS_COSMOS.fits\"\n",
-    "field_fname = results_folder+\"fields/2604912508670050304/field_2604912508670050304.fits\""
+    "region_fname = \"./vasca_pipeline/TDS_COSMOS/region_TDS_COSMOS.fits\""
    ]
   },
   {
@@ -53,7 +51,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table140688309215024-557495\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140587151031360-702950\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field_id</th><th>name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>sel</th><th>fov_diam</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th>deg</th><th></th><th>s</th><th>d</th><th>d</th></tr></thead>\n",
        "<tr><td>0</td><td>2604912508670050304</td><td>PS_COSMOS_MOS21</td><td>150.50213748204703</td><td>3.09702777491166</td><td>GALEX</td><td>NUV</td><td>True</td><td>1.1</td><td>29</td><td>28075.799999999996</td><td>54510.593935185185</td><td>56535.16921296297</td></tr>\n",
@@ -81,14 +79,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140688309215024-557495').dataTable()\");\n",
+       "    console.log(\"$('#table140587151031360-702950').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140688309215024-557495').dataTable({\n",
+       "    $('#table140587151031360-702950').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -131,7 +129,7 @@
      "data": {
       "text/html": [
        "<i>Table length=4</i>\n",
-       "<table id=\"table140688309370784-97604\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140587155474080-57358\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>vis_id</th><th>time_bin_start</th><th>time_bin_size</th><th>sel</th><th>field_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>d</th><th>s</th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>2604912371054936064</td><td>54510.593935185185</td><td>1275.65</td><td>True</td><td>2604912508670050304</td></tr>\n",
@@ -161,14 +159,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140688309370784-97604').dataTable()\");\n",
+       "    console.log(\"$('#table140587155474080-57358').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140688309370784-97604').dataTable({\n",
+       "    $('#table140587155474080-57358').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -209,7 +207,7 @@
      "data": {
       "text/html": [
        "<i>Table length=4</i>\n",
-       "<table id=\"table140689588636736-970218\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140588448403456-803986\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>fd_src_id</th><th>ra</th><th>dec</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_var</th><th>mag_rchiq</th><th>mag_dmax</th><th>mag_dmax_sig</th><th>ul_weight</th><th>sel</th><th>field_id</th><th>rg_src_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>19</td><td>150.85211129228375</td><td>3.344284140463829</td><td>26</td><td>3</td><td>20.082601987398586</td><td>0.0035474839293175475</td><td>1.948684796827247</td><td>0.1702980628380395</td><td>5.214141079370534</td><td>0.0</td><td>True</td><td>2604912508670050304</td><td>19</td></tr>\n",
@@ -239,14 +237,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140689588636736-970218').dataTable()\");\n",
+       "    console.log(\"$('#table140588448403456-803986').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140689588636736-970218').dataTable({\n",
+       "    $('#table140588448403456-803986').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -287,7 +285,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84778f64699a48d1953b7aaa5781b915",
+       "model_id": "c9b5a72a5714417abb17447d7661d97d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +311,7 @@
      "data": {
       "text/html": [
        "<i>Table length=4</i>\n",
-       "<table id=\"table140688309365744-340731\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140587155475040-437885\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>time_start</th><th>time_delta</th><th>mag</th><th>mag_err</th><th>ul</th><th>sel</th></tr></thead>\n",
        "<thead><tr><th></th><th>d</th><th>s</th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>54510.59375</td><td>1275.6500244140625</td><td>20.05954933166504</td><td>0.037015367299318314</td><td>18.353994369506836</td><td>True</td></tr>\n",
@@ -343,14 +341,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140688309365744-340731').dataTable()\");\n",
+       "    console.log(\"$('#table140587155475040-437885').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140688309365744-340731').dataTable({\n",
+       "    $('#table140587155475040-437885').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -397,7 +395,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table140688309363488-748955\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140587113827488-707103\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>fd_src_id</th><th>mag</th><th>mag_err</th><th>ul</th><th>time_bin_start</th><th>time_bin_size</th><th>field_id</th><th>rg_src_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th></th><th>d</th><th>s</th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>19</td><td>[20.05955   0.       20.125635 20.04069  19.912304 20.112907 20.03194\\n 20.102726 20.16471  20.006193 20.099844 20.089745 19.9853   20.17396\\n 20.087082 20.087645  0.       20.122078 20.03694  20.035116 20.157976\\n 20.038393 20.066216 20.109518 20.127005  0.       20.147915 20.083242\\n 20.143024]</td><td>[0.03701537 0.         0.03700185 0.03399533 0.03266081 0.03391747\\n 0.0368081  0.03723254 0.03564352 0.0378229  0.04098009 0.04666338\\n 0.0472771  0.04725816 0.04782284 0.04051124 0.         0.0377781\\n 0.03884385 0.04371269 0.05705436 0.04593648 0.05014113 0.04492408\\n 0.04856652 0.         0.04705551 0.04682399 0.04487884]</td><td>[18.353994 18.130695 17.9042   18.245758 18.363676 18.394718 18.270094\\n 18.19824  18.130589 17.551802 17.597439 17.278326 17.02131  17.057617\\n 17.116014 17.761925 17.53826  17.89244  17.931963 17.42435  16.532663\\n 16.926003 16.781382 17.087067 17.201674 17.549099 17.361164 17.602737\\n 17.554636]</td><td>[54510.594 54520.66  54524.426 54532.508 54536.273 54540.312 54547.57\\n 54549.9   54550.17  55231.445 55233.844 55235.555 55237.68  55239.46\\n 55241.652 55249.32  55251.508 55257.535 55259.176 55261.3   55592.395\\n 55594.723 55596.707 55598.625 55600.543 55602.46  55604.375 55606.293\\n 55608.62 ]</td><td>[1275.65 1166.65 1065.6  1221.6  1280.6  1296.6  1233.55 1198.6  1166.6\\n  925.5   942.55  829.6   748.55  759.5   777.45 1006.65  920.5  1060.6\\n 1077.5   879.5   615.65  720.55  680.05  768.5   804.55  924.5   857.55\\n  944.55  926.55]</td><td>2604912508670050304</td><td>19</td></tr>\n",
@@ -425,14 +423,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140688309363488-748955').dataTable()\");\n",
+       "    console.log(\"$('#table140587113827488-707103').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140688309363488-748955').dataTable({\n",
+       "    $('#table140587113827488-707103').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -472,7 +470,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bfd856be70d406cabcdd47ede4d9564",
+       "model_id": "1284cc17d46c4e82b075fe2e8a9f8ef6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -496,8 +494,7 @@
     }
    ],
    "source": [
-    "fd = BaseField()\n",
-    "fd.load_from_fits(field_fname)\n",
+    "fd = rg.fields[2604912508670050304]\n",
     "fig_sky = vvis.plot_field_sky(fd,plot_detections=True)"
    ]
   },
