--- a/vasca/examples/vasca_pipe_result_analysis.ipynb
+++ b/vasca/examples/vasca_pipe_result_analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "a634423b-968a-4fad-8435-4ef2340005ce",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "77f8401d-49cc-41d6-ba1b-c4caa9f7e842",
    "metadata": {},
    "outputs": [
@@ -56,11 +56,11 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table140594504515200-934097\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139656042946544-141688\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field_id</th><th>name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>sel</th><th>fov_diam</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th>deg</th><th></th><th>s</th><th>d</th><th>d</th></tr></thead>\n",
-       "<tr><td>0</td><td>2604912508670050304</td><td>PS_COSMOS_MOS21</td><td>150.50213748204703</td><td>3.09702777491166</td><td>GALEX</td><td>NUV</td><td>True</td><td>1.1</td><td>29</td><td>28075.799999999996</td><td>54510.593935185185</td><td>56535.16921296297</td></tr>\n",
-       "<tr><td>1</td><td>2604982877414227968</td><td>PS_COSMOS_MOS22</td><td>149.49989874061703</td><td>3.10005767451708</td><td>GALEX</td><td>NUV</td><td>True</td><td>1.1</td><td>29</td><td>27164.39999999999</td><td>54509.566979166666</td><td>56515.80884259259</td></tr>\n",
+       "<tr><td>0</td><td>GNU2604912508670050304</td><td>PS_COSMOS_MOS21</td><td>150.50213748204703</td><td>3.09702777491166</td><td>GALEX</td><td>NUV</td><td>True</td><td>1.1</td><td>29</td><td>28075.799999999996</td><td>54510.593935185185</td><td>56535.16921296297</td></tr>\n",
+       "<tr><td>1</td><td>GNU2604982877414227968</td><td>PS_COSMOS_MOS22</td><td>149.49989874061703</td><td>3.10005767451708</td><td>GALEX</td><td>NUV</td><td>True</td><td>1.1</td><td>29</td><td>27164.39999999999</td><td>54509.566979166666</td><td>56515.80884259259</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -84,19 +84,19 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140594504515200-934097').dataTable()\");\n",
+       "    console.log(\"$('#table139656042946544-141688').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140594504515200-934097').dataTable({\n",
+       "    $('#table139656042946544-141688').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
        "        pagingType: \"full_numbers\",\n",
-       "        columnDefs: [{targets: [0, 1, 3, 4, 8, 9, 10, 11, 12], type: \"optionalnum\"}]\n",
+       "        columnDefs: [{targets: [0, 3, 4, 8, 9, 10, 11, 12], type: \"optionalnum\"}]\n",
        "    });\n",
        "});\n",
        "</script>\n"
@@ -105,7 +105,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "3bd194bf-d378-4ad0-a5bf-7d9fc6c030a0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9026415623a4d00a345ebcbe9dd94cd",
+       "model_id": "6c12f039925f4a858eec2c59c9422c66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,7 +168,7 @@
      "data": {
       "text/html": [
        "<i>Table length=4</i>\n",
-       "<table id=\"table140595140295360-97231\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139654562303040-128972\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>time_start</th><th>time_delta</th><th>mag</th><th>mag_err</th><th>ul</th><th>sel</th></tr></thead>\n",
        "<thead><tr><th></th><th>d</th><th>s</th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>54510.59375</td><td>1275.6500244140625</td><td>20.05954933166504</td><td>0.037015367299318314</td><td>18.353994369506836</td><td>True</td></tr>\n",
@@ -198,14 +198,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140595140295360-97231').dataTable()\");\n",
+       "    console.log(\"$('#table139654562303040-128972').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140595140295360-97231').dataTable({\n",
+       "    $('#table139654562303040-128972').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -219,7 +219,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "085c90f3-1946-4f47-9cb2-6d8fd5c39b37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a35dccb218542719588035b07720932",
+       "model_id": "162df2ba46df4561a775875528c35150",
        "version_major": 2,
        "version_minor": 0
       },
@@ -284,7 +284,7 @@
     }
    ],
    "source": [
-    "field_id = 2604912508670050304\n",
+    "field_id = rg.tt_fields[\"field_id\"][0]\n",
     "fd = rg.fields[field_id]\n",
     "fig_sky = vvis.plot_field_sky(fd,plot_detections=True)"
    ]
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "8f52ebf4-a2b9-4db6-95b6-afe76b38e9cd",
    "metadata": {},
    "outputs": [
@@ -309,14 +309,14 @@
        "<HpxGnomonicAxes: title={'center': 'Nr. of visits'}>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9287b5dba273400998e0f8507bda6d0c",
+       "model_id": "ec572c54577f4f4cb21ba9eca5a6fdcf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "4c285c1c-cb4a-4e8d-a945-a6564c70e611",
    "metadata": {},
    "outputs": [],
@@ -388,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "45d4cdd3-a474-47ce-8721-ad882bdaa15f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "990d630bcba74f6486ea40fb2cb7ffdb",
+       "model_id": "6202ccd44223455da0e8ae40d4108c7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -420,7 +420,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af09ce0422bc4258a7ce1bf4155491ff",
+       "model_id": "c4e8b39266a74ad9be2f42ec4033cb05",
        "version_major": 2,
        "version_minor": 0
       },
