Added magnitudes units

--- a/vasca/examples/vasca_pipe_result_analysis.ipynb
+++ b/vasca/examples/vasca_pipe_result_analysis.ipynb
@@ -450,8 +450,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8410d356-b7e1-4d40-99ba-e97cb7972364",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22.0 mag(AB)\n",
+      "23.0 AB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from astropy import units as uu\n",
+    "\n",
+    "mag = 22*uu.ABmag\n",
+    "print(mag)\n",
+    "\n",
+    "mag2 = 23* uu.Unit(\"ABflux\")\n",
+    "print(mag2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "74c8cf8c-c217-4807-a627-49c2268d86b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\mathrm{AB}$"
+      ],
+      "text/plain": [
+       "Unit(\"AB\")"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mag2.unit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd0194f5-fb9a-4dd9-a75d-2ecf4ce52489",
    "metadata": {},
    "outputs": [],
    "source": []
